Added page to configure alertspage

--- a/resources/web/panel/index.html
+++ b/resources/web/panel/index.html
@@ -200,6 +200,11 @@
                                     <li><a href="#greetings.html" data-folder="alerts"><i class="fa fa-circle-o"></i> User Greetings</a></li>
                                 </ul>
                             </li>
+                            <li>
+                                <a href="#overlay.html" data-folder="alerts">
+                                    <i class="fa fa-circle-o"></i> <span> Overlay</span>
+                                </a>
+                            </li>
 
                             <!-- Soon -->
                             <!-- <li class="treeview">
